# triton-training

./: .gitignore  README.md
nanotriton-lm/: PROJECT_PLAN.md  README.md  pyproject.toml
nanotriton-lm/benchmarks/: bench_rmsnorm.py  bench_rmsnorm_backward.py  bench_swiglu.py  utils.py
nanotriton-lm/configs/: tiny_shakespeare_ref.yaml  tiny_shakespeare_triton_rmsnorm.yaml  tiny_shakespeare_triton_swiglu.yaml
nanotriton-lm/data/shakespeare_char/: prepare.py
nanotriton-lm/docs/: milestone1_smoke_2026-04-29.md  milestone2_kernels_2026-04-29.md  milestone3_rmsnorm_backward_2026-04-29.md  milestone4_triton_rmsnorm_model_2026-04-29.md  milestone5_swiglu_2026-04-29.md  milestone6_triton_swiglu_model_2026-04-29.md  rl_training_system_plan.md  vm_selection.md
nanotriton-lm/nanotriton/: __init__.py  checkpoint.py  config.py  generate.py  model_ref.py  tokenizer.py  train.py  utils.py
nanotriton-lm/nanotriton/autograd/: __init__.py  rmsnorm_fn.py  swiglu_fn.py
nanotriton-lm/nanotriton/kernels/: __init__.py  rmsnorm.py  swiglu.py  vector_add.py
nanotriton-lm/nanotriton/modules/: __init__.py  (+1 more)
nanotriton-lm/references/: MANIFEST.md
nanotriton-lm/scripts/: compare_loss_curves.py  env_report.py  fetch_references.py  gcp_copy_project_to_vm.sh  gcp_run_milestone1_smoke.sh  gcp_run_milestone2_kernels.sh  gcp_run_milestone3_rmsnorm_backward.sh  gcp_run_milestone4_triton_rmsnorm_model.sh  gcp_run_milestone5_swiglu.sh  gcp_run_milestone6_triton_swiglu_model.sh
nanotriton-lm/tests/: test_model_ref.py  test_rmsnorm.py  test_sanity.py  test_swiglu.py  test_vector_add.py
(+254 files in other folders)
