[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanotriton-lm"
version = "0.1.0"
description = "A small GPT training stack for replacing PyTorch pieces with Triton kernels."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
gpu = [
  "torch>=2.3",
  "triton>=2.3; platform_system == 'Linux'",
]

[tool.setuptools.packages.find]
include = ["nanotriton*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
